CreateGif: fix z-index

--- a/packages/thicket-webapp/src/App/Community/Community.css
+++ b/packages/thicket-webapp/src/App/Community/Community.css
@@ -90,6 +90,7 @@
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: 1;
 }
 
 .community__create-onTop{
